--- a/html/event/event05.html
+++ b/html/event/event05.html
@@ -55,43 +55,228 @@
 <div id="page-content">
 	<div class="eventWrap">
 		<article class="eventMain">
-			<style>
-				.eventWrap .eventMain .innerSection {
-					padding: 56px 0 110px;
-				}
-				.eventWrap .eventMain .mainVisual {
-					text-align: center;
-				}
-				.eventWrap .eventMain .mainVisual h2 {
-					display: inline-block;
-				}
-				.eventWrap .eventMain .mainVisual h2 img {
-					width: 100%;
-				}
-			</style>
 			<div class="innerSection">
 				<div class="mainVisual">
 					<h2><img src="./images/eventImg/event05/main_tit.png" alt="소문내기 event 잡아바를 널리널리 알려주세요"></h2>
-				</div>		
+				</div>
 				<div class="evInfo">
-					<div class="circle">
-						<span></span>
-						<span></span>
-						<span></span>
+					<div class="infoWrap">
+						<div class="tit">
+							<p class="gBold">이벤트 경품</p>
+						</div>
+						<div class="infoBox">
+							<ul class="evList">
+								<li>
+									<div>
+										<div class="imgWrap">
+											<img src="./images/eventImg/event05/ev_icon01.png" alt="네이버페이 3만원권">
+										</div>
+										<p>네이버페이 3만원권</p>
+									</div>
+								</li>
+								<li>
+									<div>
+										<div class="imgWrap">
+											<img src="./images/eventImg/event05/ev_icon02.png" alt="교촌치킨 세트">
+										</div>
+										<p>교촌치킨 세트</p>
+									</div>
+								</li>
+								<li>
+									<div>
+										<div class="imgWrap">
+											<img src="./images/eventImg/event05/ev_icon03.png" alt="맘스터치 햄버거 세트">
+										</div>
+										<p>맘스터치 햄버거 세트</p>
+									</div>
+								</li>
+								<li>
+									<div>
+										<div class="imgWrap">
+											<img src="./images/eventImg/event05/ev_icon04.png" alt="스타벅스 아메리카노">
+										</div>
+										<p>스타벅스 아메리카노</p>
+									</div>
+								</li>
+								<li>
+									<div>
+										<div class="imgWrap">
+											<img src="./images/eventImg/event05/ev_icon05.png" alt="cu 편의점 모바일 상품권">
+										</div>
+										<p>CU 편의점 모바일 상품권</p>
+									</div>
+								</li>
+							</ul>
+							<ul class="infoTxt">
+								<li>
+									<p class="evTit">이벤트 기간</p>
+									<p class="evTxt">2024년 10월 21일(월) ~ 11월 10일(일) / <span>21일간 진행</span></p>
+								</li>
+								<li>
+									<p class="evTit">당첨자 발표</p>
+									<p class="evTxt">2024년 11월 14일(목)</p>
+								</li>
+								<li>
+									<p class="evTit">참여 방법</p>
+									<p class="evTxt gBold">이벤트 페이지 url 복사 후, 개인 SNS에 공유하고 게시글 URL을 댓글로 남기면 참여 완료!</p>
+								</li>
+							</ul>
+						</div>						
+					</div>					
+				</div>
+				<div class="evTip">
+					<div class="titWrap">
+						<p><img src="./images/eventImg/event05/tip_tit.png" alt="당첨 확률 올리는 꿀팁"></p>
 					</div>
-					<p class="txt gBold">잡아바에서 <span class="gBold">취업 역량도 강화</span>하고 <span class="gBold">경품 당첨의 행운</span>까지 잡아보세요!!</p>
-					<ul>
-						<li>
-							<strong>이벤트 기간</strong>
-							<p>2024년 <span class="gBold">8</span>월 <span class="gBold">12</span>일(월) ~ <span class="gBold">8</span>월 <span class="gBold">25</span>일(일) / 14일간 진행</p>
-						</li>
-						<li>
-							<strong>당첨자 발표</strong>
-							<p>2024년 8월 27일(화)</p>
-						</li>
-					</ul>
-				</div>	
+					<div class="tibWrap">
+						<ul class="tibBox">
+							<li>
+								<p>해시태그를 많이 입력할수록 당첨확률이 올라갑니다!
+									<span>(#잡아바 #일자리플랫폼 #AI역량검사 #취업진단 #자소서첨삭 #취업지원 등)</span></p>
+							</li>
+							<li>
+								<p>다양한 SNS를 통해 많이 공유할수록 당첨확률이 올라갑니다!														  
+									<span>(페이스북, 인스타그램, 네이버 블로그, 네이버카페에 작성한 링크만 참여가능)</span></p>
+							</li>
+							<li>
+								<p>홍보용 이미지를 활용해서 게시글을 작성하면 당첨확률이 올라갑니다!</p>
+							</li>
+							<li>
+								<p>홍보글을 상세하게 작성할 경우 당첨 확률이 올라갑니다!</p>
+							</li>
+							<li>
+								<p>이벤트 페이지 공유 후에 게시글을 유지시켜 주세요!</p>
+							</li>
+							<li>
+								<p class="gBold">당첨자 발표일 기준 게시글이 삭제된 경우 당첨에서 제외될 수 있습니다.</p>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class="linkWrap">
+					<a href="http://www.naver.com" id="copyLink"><span>이벤트 페이지 주소 복사</span></a>
+					<p>(위 이미지를 클릭 하시면 주소가 복사 됩니다.)</p>
+				</div>
 			</div>	 
+		</article>
+		<article class="cont01">
+			<div class="innerSection">
+				<div class="titWrap">
+					<p class="gBold">홍보용 이미지</p>
+				</div>
+				<ul class="imgLink">
+					<li>
+						<div class="imgWrap">
+							<img src="./images/eventImg/event05/link_img01.jpg" alt="잡아바 상담 talk">
+							<a href="./images/eventImg/event05/link_img01.jpg" download><span class="ir-text">잡아바 상담 talk 이미지 다운로드</span></a>
+						</div>
+					</li>
+					<li>
+						<div class="imgWrap">
+							<img src="./images/eventImg/event05/link_img02.jpg" alt="자기소개서 컨설팅">
+							<a href="./images/eventImg/event05/link_img02.jpg" download><span class="ir-text">자기소개서 컨설팅 이미지 다운로드</span></a>
+						</div>
+					</li>
+					<li>
+						<div class="imgWrap">
+							<img src="./images/eventImg/event05/link_img03.jpg" alt="AI역량검사">
+							<a href="./images/eventImg/event05/link_img03.jpg" download><span class="ir-text">AI역량검사 이미지 다운로드</span></a>
+						</div>
+					</li>
+					<li>
+						<div class="imgWrap">
+							<img src="./images/eventImg/event05/link_img04.jpg" alt="잡아바 러닝센터">
+							<a href="./images/eventImg/event05/link_img04.jpg" download><span class="ir-text">잡아바 러닝센터 이미지 다운로드</span></a>
+						</div>
+					</li>
+					<li>
+						<div class="imgWrap">
+							<img src="./images/eventImg/event05/link_img05.jpg" alt="취업진로 진단검사">
+							<a href="./images/eventImg/event05/link_img05.jpg" download><span class="ir-text">취업진로 진단검사 이미지 다운로드</span></a>
+						</div>
+					</li>
+					<li>
+						<div class="imgWrap">
+							<img src="./images/eventImg/event05/link_img06.jpg" alt="커리어 부트캠프">
+							<a href="./images/eventImg/event05/link_img06.jpg" download><span class="ir-text">커리어 부트캠프 이미지 다운로드</span></a>
+						</div>
+					</li>
+				</ul>
+				<div class="reviewWrap">
+					<div class="wirteForm">
+						<div class="txtWrap">
+							<p>※ 이벤트 참여 후에 수정 불가합니다.</p>
+							<p>※ 게시글이 여러 개일 경우, 줄바꿈 후에 이어서 입력해주세요.</p>
+						</div>
+						<div class="areaWrap">
+							<textarea placeholder="(작성 예시)&#13;인스타그램 / https://www...&#13;페이스북 / https://www...&#13;네이버 블로그 / https://www...&#13;네이버 카페 / https://www..."></textarea>
+						</div>
+						<div class="evbtn">
+							<button type="button"><span class="gBold">등록</span></button>
+						</div>
+					</div>
+					<div class="viewWrap">
+						<div class="cntTxt">
+							<p>총 <span class="gBold">200</span>개</p>
+						</div>
+						
+						<ul class="comList">
+							<li>
+								<div class="evComment">
+									<p class="tct">등록된 응모가 없습니다</p>
+								</div>
+							</li>
+							<li>
+								<div class="evComment">
+									<p>잡아바 소문내기 이벤트에 응모하였습니다.</p>
+								</div>
+								<div class="evDate">
+									<span>홍주*</span>
+									<span>***njh11@gmail.com</span>
+									<span>2024-08-08</span>
+								</div>
+							</li>
+							<li>
+								<div class="evComment">
+									<p>잡아바 소문내기 이벤트에 응모하였습니다.</p>
+								</div>
+								<div class="evDate">
+									<span>윤주*</span>
+									<span>***njh11@gmail.com</span>
+									<span>2024-08-08</span>
+								</div>
+							</li>
+							<li>
+								<div class="evComment">
+									<p>잡아바 소문내기 이벤트에 응모하였습니다.</p>
+								</div>
+								<div class="evDate">
+									<span>임꺽*</span>
+									<span>***njh11@gmail.com</span>
+									<span>2024-08-08</span>
+								</div>
+							</li>
+						</ul>
+						<!-- 페이징 -->
+						<div class="paging">
+							<a href="javscript:void(0);">&lt;&lt;</a>
+							<a href="javscript:void(0);">&lt;</a>
+							<a href="javscript:void(0);" class="current">1</a>
+							<a href="javscript:void(0);">2</a>
+							<a href="javscript:void(0);">3</a>
+							<a href="javscript:void(0);">4</a>
+							<a href="javscript:void(0);">5</a>
+							<a href="javscript:void(0);">&gt;</a>
+							<a href="javscript:void(0);">&gt;&gt;</a>
+						</div>
+						<div class="mpaging">
+							<a href="javscript:void(0);">이전</a>
+							<span>1</span> / 15
+							<a href="javscript:void(0);">다음</a>
+						</div>
+					</div>
+				</div>
+			</div>
 		</article>
 
 		
@@ -121,7 +306,16 @@
 
 <script>	
 	$(document).ready(function() {
-		
+		$("#copyLink").click(function(e) {
+			e.preventDefault();
+			const link = $(this).attr("href");
+			const $tempInput = $("<textarea>");
+			$("body").append($tempInput);
+			$tempInput.val(link).select();
+			document.execCommand("copy");
+			$tempInput.remove();
+			alert("링크가 복사되었습니다!");
+		});
 		
 	});
 </script>
