--- a/index.html
+++ b/index.html
@@ -393,6 +393,11 @@
 				<td>뉴스레터</td>
 				<td><a href="html/wz/wz339.html" class="preview" target="_blank">뉴스레터 339호</a></td>
 			</tr>
+			<tr class="event">
+				<td></td>
+				<td>이벤트</td>
+				<td><a href="html/event/event05.html" class="preview" target="_blank">소문내기 event</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
