--- a/html/event/event05.html
+++ b/html/event/event05.html
@@ -284,7 +284,7 @@
 			<div class="innerSection">
 				<h3>이벤트 참여 유의사항</h3>
 				<ul>
-					<li>본 경품 소진 시까지 반복적으로 참여 가능합니다.</li>
+					<li>본 이벤트는 중복 당첨이 불가합니다.</li>
 					<li>이벤트 응모 과정에서 부정한 방법을 사용한 것이 확인되는 경우 당첨이 취소될 수 있습니다.</li>
 					<li>경품은 사전공지 없이 유사 품목·가격대의 경품으로 대체될 수 있습니다.</li>
 					<li>개인정보 오기입으로 인한 경품 미수령 시 재발송되지 않습니다.</li>
