--- a/index.html
+++ b/index.html
@@ -398,6 +398,11 @@
 				<td>이벤트</td>
 				<td><a href="html/event/event05.html" class="preview" target="_blank">소문내기 event</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/wz340.html" class="preview" target="_blank">뉴스레터 340호</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
