--- a/html/thema/10.html
+++ b/html/thema/10.html
@@ -287,7 +287,7 @@
 						<!-- 북부 -->
 						<div class="tabCont active" id="tab-1">
 							<ul class="tabList">
-								<li><a href="https://www.jobaba.net/extrActv/detail.do?seq=177" target="_blank">
+								<li class="jobEnd"><a href="https://www.jobaba.net/extrActv/detail.do?seq=177" target="_blank">
 									<div class="listImg">
 										<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20241008/info_img04.jpg" alt="2024년 경기북부 여성취업박람회 ‘일뜰날’">
 									</div>
@@ -314,7 +314,6 @@
 											<span>#구직·창업 상담</span>
 										</div>
 									</div>
-									<p class="linkBtn">자세히보기 →</p>
 								</a></li>
 								<li><a href="https://www.jobaba.net/extrActv/detail.do?seq=304" target="_blank">
 									<div class="listImg">
@@ -438,7 +437,7 @@
 						<!-- 동부 -->
 						<div class="tabCont active" id="tab-2">
 							<ul class="tabList">
-								<li><a href="https://www.jobaba.net/extrActv/detail.do?seq=223" target="_blank">
+								<li class="jobEnd"><a href="https://www.jobaba.net/extrActv/detail.do?seq=223" target="_blank">
 									<div class="listImg">
 										<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20241008/info_img06.jpg" alt="2024년 가평특별군 대규모 일자리박람회">
 									</div>
@@ -465,7 +464,6 @@
 											<span>#군인가족·경력단절·이주여성</span>
 										</div>
 									</div>
-									<p class="linkBtn">자세히보기 →</p>
 								</a></li>
 								<li><a href="https://www.jobaba.net/extrActv/detail.do?seq=221" target="_blank">
 									<div class="listImg">
@@ -600,7 +598,7 @@
 						<!-- 중부 -->
 						<div class="tabCont active" id="tab-4">
 							<ul class="tabList">							
-								<li><a href="https://www.jobaba.net/extrActv/detail.do?seq=275" target="_blank">
+								<li class="jobEnd"><a href="https://www.jobaba.net/extrActv/detail.do?seq=275" target="_blank">
 									<div class="listImg">
 										<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20241008/info_img15.jpg" alt="2024 화성여성 취ㆍ창업박람회">
 									</div>
@@ -627,9 +625,8 @@
 											<span>#취업특강</span>
 										</div>
 									</div>
-									<p class="linkBtn">자세히보기 →</p>
 								</a></li>
-								<li><a href="https://www.jobaba.net/extrActv/detail.do?seq=235" target="_blank">
+								<li class="jobEnd"><a href="https://www.jobaba.net/extrActv/detail.do?seq=235" target="_blank">
 									<div class="listImg">
 										<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20241008/info_img14.jpg" alt="슬기로운 JOB 페스티벌">
 									</div>
@@ -657,7 +654,6 @@
 											<span>#면접메이크업</span>
 										</div>
 									</div>
-									<p class="linkBtn">자세히보기 →</p>
 								</a></li>
 								<li><a href="https://www.jobaba.net/extrActv/detail.do?seq=290" target="_blank">
 									<div class="listImg">
@@ -773,7 +769,36 @@
 										</div>
 									</div>
 									<p class="linkBtn">자세히보기 →</p>
-								</a></li>							
+								</a></li>
+								<li><a href="https://www.jobaba.net/extrActv/detail.do?seq=342" target="_blank">
+									<div class="listImg">
+										<img src="https://chaebonggi.github.io/jobabamain/html/thema/images/20241008/info_img20.jpg" alt="2024 과천시 일자리&생애설계 박람회">
+									</div>
+									<div class="listInfo">
+										<p class="tit gBold">2024 과천시 일자리&생애설계 박람회</p>
+										<ul>
+											<li>
+												<p>
+												박람회 일정
+												<span class="gBold">11.08.(금)</span>
+												</p>								  
+											</li>
+											<li>
+												<p>
+												박람회 장소
+												<span class="gBold">디테크타워 B동 1층 중앙홀</span>
+												</p>												
+											</li>
+										</ul>
+										<div class="tagList">
+											<span>#15개 기업 참여</span>
+											<span>#AI합격 자소서 코칭</span>
+											<span>#퍼스널컬러</span>
+											<span>#타로상담</span>
+										</div>
+									</div>
+									<p class="linkBtn">자세히보기 →</p>
+								</a></li>	
 							</ul>
 						</div>
 					</div>
