--- a/index.html
+++ b/index.html
@@ -403,6 +403,11 @@
 				<td>뉴스레터</td>
 				<td><a href="html/wz/wz340.html" class="preview" target="_blank">뉴스레터 340호</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>페이지</td>
+				<td><a href="html/page/온라인채용관_메인(수정).html" class="preview" target="_blank">온라인채용관_메인(수정)</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
