--- a/index.html
+++ b/index.html
@@ -408,6 +408,11 @@
 				<td>페이지</td>
 				<td><a href="html/page/온라인채용관_메인(수정).html" class="preview" target="_blank">온라인채용관_메인(수정)</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>페이지</td>
+				<td><a href="html/page/온라인채용관_상세(수정).html" class="preview" target="_blank">온라인채용관_상세(수정)</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
