--- a/index.html
+++ b/index.html
@@ -413,6 +413,11 @@
 				<td>페이지</td>
 				<td><a href="html/page/온라인채용관_상세(수정).html" class="preview" target="_blank">온라인채용관_상세(수정)</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/wz341.html" class="preview" target="_blank">뉴스레터 341호</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
