--- a/html/wz/wz341.html
+++ b/html/wz/wz341.html
@@ -85,14 +85,13 @@
                     <tbody> 
                       <tr>
                         <td>
-                          <!-- https://chaebonggi.github.io/jobabamain/html/wz/images/wz340/wz340_1.png -->
                           <img src="https://chaebonggi.github.io/jobaba2023/html/wz/images/wz277/wz_277_01.png" alt="zoom in 일자리 사업" width="800" height="81" style="display: block;">
                         </td>
                       </tr> 
                       <tr>
                         <td>
                           <a href="https://www.jobaba.net/eventInfo/eventInfoView.do?evTy=03&evSeq=120&evDt=20241021&src=text&kw=0000A9" target="_blank" style="text-decoration: none;">
-                            <img src="./images/wz341/wz341_1.png" alt="잡아바 소문내기 event" width="800" style="display: block;width: 100%">
+                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz341/wz341_1.png" alt="잡아바 소문내기 event" width="800" style="display: block;width: 100%">
                           </a> 
                         </td>
                       </tr> 
@@ -117,12 +116,12 @@
                                         <tr>
                                           <td>
                                             <a href="https://www.jobaba.net/jobSprt/detail.do?seq=688" target="_blank">
-                                              <img src="./images/wz341/wz341_2.png" alt="경기도 청년 면접수당 ‘면접특강’" width="360" style="display: block;">
+                                              <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz341/wz341_2.png" alt="경기도 청년 면접수당 ‘면접특강’" width="360" style="display: block;">
                                             </a>
                                           </td>
                                           <td>
                                             <a href="https://www.jobaba.net/jobSprt/detail.do?seq=653" target="_blank">
-                                              <img src="./images/wz341/wz341_3.png" alt="커리어 부트캠프 온라인멘토링 이벤트" width="360" style="display: block;">
+                                              <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz341/wz341_3.png" alt="커리어 부트캠프 온라인멘토링 이벤트" width="360" style="display: block;">
                                             </a>
                                           </td>
                                         </tr>
@@ -140,12 +139,12 @@
                                       <tr>
                                         <td>
                                           <a href="https://www.jobaba.net/extrActv/detail.do?seq=357" target="_blank">
-                                            <img src="./images/wz341/wz341_4.png" alt="의왕시 5070 일자리박람회" width="360" style="display: block;">
+                                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz341/wz341_4.png" alt="의왕시 5070 일자리박람회" width="360" style="display: block;">
                                           </a>
                                         </td>                                       
                                         <td>
                                           <a href="https://www.jobaba.net/empmEdu/detail.do?seq=14744" target="_blank">
-                                            <img src="./images/wz341/wz341_5.png" alt="경기도 소상공인 자격증 취득 지원" width="360" style="display: block;">
+                                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz341/wz341_5.png" alt="경기도 소상공인 자격증 취득 지원" width="360" style="display: block;">
                                           </a>
                                         </td>                                        
                                       </tr>
@@ -177,28 +176,28 @@
                               <tr>
                                 <td align="center">
                                   <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=21141" target="_blank" style="text-decoration: none;">      
-                                    <img src="./images/wz341/wz341_6.png" alt="[국세공무원교육원] 2024년 공무직 근로자 채용공고" width="740" style="vertical-align: top;">
+                                    <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz341/wz341_6.png" alt="[국세공무원교육원] 2024년 공무직 근로자 채용공고" width="740" style="vertical-align: top;">
                                   </a>
                                 </td>
                               </tr>
                               <tr>
                                 <td align="center">
                                   <a href="https://apply.jobaba.net/bsns/bsnsDetailView.do?bsnsSeq=3773" target="_blank" style="text-decoration: none;">      
-                                    <img src="./images/wz341/wz341_7.png" alt="[광명소방서] 기간제 근로자(조리사) 채용 공고" width="740" style="vertical-align: top;">
+                                    <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz341/wz341_7.png" alt="[광명소방서] 기간제 근로자(조리사) 채용 공고" width="740" style="vertical-align: top;">
                                   </a>
                                 </td>
                               </tr>
                               <tr>
                                 <td align="center">
                                   <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=20961" target="_blank" style="text-decoration: none;">      
-                                    <img src="./images/wz341/wz341_8.png" alt="[화성시청] 2024년 하반기 화성시 공무직 근로자 채용공고" width="740" style="vertical-align: top;">
+                                    <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz341/wz341_8.png" alt="[화성시청] 2024년 하반기 화성시 공무직 근로자 채용공고" width="740" style="vertical-align: top;">
                                   </a>
                                 </td>
                               </tr>
                               <tr>
                                 <td align="center">
                                   <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=20933" target="_blank" style="text-decoration: none;">      
-                                    <img src="./images/wz341/wz341_9.png" alt="[코리아경기도] 2024년 제1차 정규직 직원 채용공고" width="740" style="vertical-align: top;">
+                                    <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz341/wz341_9.png" alt="[코리아경기도] 2024년 제1차 정규직 직원 채용공고" width="740" style="vertical-align: top;">
                                   </a>
                                 </td>
                               </tr>
@@ -224,14 +223,14 @@
                       <tr>
                         <td>
                           <a href="https://www.jobaba.net/pblcEmpmn/publicJobDetail.do?seq=21500" target="_blank" style="text-decoration: none;">
-                            <img src="./images/wz341/wz341_10.png" alt="경기도일자리재단 제12차 유기계약직 직원 채용" width="800" style="display: block;">                                
+                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz341/wz341_10.png" alt="경기도일자리재단 제12차 유기계약직 직원 채용" width="800" style="display: block;">                                
                           </a>
                         </td>
                       </tr>
                       <tr>
                         <td>
                           <a href="https://www.jobaba.net/interview/mainList.do" target="_blank" style="text-decoration: none;">
-                            <img src="./images/wz341/wz341_11.png" alt="ai역량검사 꿀팁" width="800" style="display: block;">                                
+                            <img src="https://chaebonggi.github.io/jobabamain/html/wz/images/wz341/wz341_11.png" alt="ai역량검사 꿀팁" width="800" style="display: block;">                                
                           </a>
                         </td>
                       </tr>
