--- a/index.html
+++ b/index.html
@@ -423,6 +423,11 @@
 				<td>뉴스레터</td>
 				<td><a href="html/corp/corp10.html" class="preview" target="_blank">기업회원 뉴스레터 10월호</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/wz342.html" class="preview" target="_blank">뉴스레터 342호</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
