--- a/index.html
+++ b/index.html
@@ -433,6 +433,16 @@
 				<td>뉴스레터</td>
 				<td><a href="html/wz/wz343.html" class="preview" target="_blank">뉴스레터 343호</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>페이지</td>
+				<td><a href="html/page/관리자 테이블_일정관리.html" class="preview" target="_blank">관리자 테이블_일정관리</a></td>
+			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>페이지</td>
+				<td><a href="html/page/관리자 테이블_팝업.html" class="preview" target="_blank">관리자 테이블_팝업</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
