--- a/index.html
+++ b/index.html
@@ -443,6 +443,11 @@
 				<td>페이지</td>
 				<td><a href="html/page/관리자 테이블_팝업.html" class="preview" target="_blank">관리자 테이블_팝업</a></td>
 			</tr>
+			<tr class="webzine">
+				<td></td>
+				<td>뉴스레터</td>
+				<td><a href="html/wz/wz344.html" class="preview" target="_blank">뉴스레터 344호</a></td>
+			</tr>
         </tbody>
 	</table>
 </div>
