--- a/html/thema/11.html
+++ b/html/thema/11.html
@@ -24,7 +24,7 @@
 	<link type="text/css" rel="stylesheet" href="../etc/css/fonts.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery.scrollbar/0.2.11/jquery.scrollbar.css">
 	
-
+	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 	<!--추가 css-->
 	<link rel="stylesheet" href="./css/11.css" />
@@ -111,7 +111,7 @@
 								<p class="gBold">경기도 청년 니트규모</p>
 								<span>단위:천명</span>
 							</div>
-							<div class="imgWrap">
+							<div class="imgWrap" data-aos="fade-right" data-aos-duration="1500" data-aos-once="true">
 								<img src="./images/20241118/chart01.png" alt="경기도 청년 니트규모">
 							</div>
 						</div>
@@ -119,7 +119,7 @@
 							<div class="titWrap">
 								<p class="gBold">"쉬었음"청년 비중</p>
 							</div>
-							<div class="imgWrap">
+							<div class="imgWrap" data-aos="fade-right" data-aos-duration="1500" data-aos-once="true" data-aos-delay="1000">
 								<img src="./images/20241118/chart02.png" alt="쉬었음 청년 비중">
 							</div>
 						</div>
@@ -146,7 +146,7 @@
 								<p class="gBold">취업 의사가 있나요?</p>
 								<span>단위:천명</span>
 							</div>
-							<div class="imgWrap">
+							<div class="imgWrap" data-aos="fade-right" data-aos-duration="1500" data-aos-once="true">
 								<img src="./images/20241118/chart03.png" alt="취업 의사">
 							</div>
 						</div>
@@ -154,7 +154,7 @@
 							<div class="titWrap">
 								<p class="gBold">구직활동을 하지 않는 이유</p>
 							</div>
-							<div class="imgWrap">
+							<div class="imgWrap" data-aos="fade-right" data-aos-duration="1500" data-aos-once="true" data-aos-delay="1000">
 								<img src="./images/20241118/chart04.png" alt="구직활동을 하지 않는 이유">
 							</div>
 						</div>
@@ -187,7 +187,7 @@
 								<p class="gBold">퇴직 후 1년 이상 쉬고 있는 청년</p>
 								<span>단위:천명</span>
 							</div>
-							<div class="imgWrap">
+							<div class="imgWrap" data-aos="fade-right" data-aos-duration="1500" data-aos-once="true">
 								<img src="./images/20241118/chart05.png" alt="퇴직 후 1년 이상 쉬고 있는 청년">
 							</div>
 						</div>
@@ -196,7 +196,7 @@
 								<p class="gBold">일 경험 없는 청년</p>
 								<span>단위:천명</span>
 							</div>
-							<div class="imgWrap">
+							<div class="imgWrap" data-aos="fade-right" data-aos-duration="1500" data-aos-once="true" data-aos-delay="1000">
 								<img src="./images/20241118/chart06.png" alt="일 경험 없는 청년">
 							</div>
 						</div>
@@ -263,7 +263,7 @@
 								<p class="gBold">경기도 외국인 고용지표</p>
 								<span>단위:천명</span>
 							</div>
-							<div class="imgWrap">
+							<div class="imgWrap" data-aos="fade-right" data-aos-duration="1500" data-aos-once="true">
 								<img src="./images/20241118/chart07.png" alt="경기도 외국인 고용지표">
 							</div>
 						</div>
@@ -272,7 +272,7 @@
 								<p class="gBold">외국인 고용보험 가입자 수</p>
 								<span>단위:명</span>
 							</div>
-							<div class="imgWrap">
+							<div class="imgWrap" data-aos="fade-right" data-aos-duration="1500" data-aos-once="true" data-aos-delay="1000">
 								<img src="./images/20241118/chart08.png" alt="외국인 고용보험 가입자 수">
 							</div>
 						</div>
@@ -289,7 +289,7 @@
 								<p class="gBold">경기도 산업별 미충원인원</p>
 								<span>단위:명</span>
 							</div>
-							<div class="imgWrap">
+							<div class="imgWrap" data-aos="fade-right" data-aos-duration="1500" data-aos-once="true">
 								<img src="./images/20241118/chart09.png" alt="경기도 산업별 미충원인원">
 							</div>
 						</div>
@@ -298,7 +298,7 @@
 								<p class="gBold">산업별 외국인 노동자 취업자 현황</p>
 								<span>단위:명</span>
 							</div>
-							<div class="imgWrap">
+							<div class="imgWrap" data-aos="fade-right" data-aos-duration="1500" data-aos-once="true" data-aos-delay="1000">
 								<img src="./images/20241118/chart10.png" alt="산업별 외국인 노동자 취업자 현황">
 							</div>
 						</div>
@@ -534,7 +534,7 @@
 							<div class="titWrap">
 								<p class="gBold">학력수준별 AI기술 노출 지수</p>
 							</div>
-							<div class="imgWrap">
+							<div class="imgWrap" data-aos="fade-right" data-aos-duration="1500" data-aos-once="true">
 								<img src="./images/20241118/chart11.png" alt="학력수준별 AI기술 노출 지수">
 							</div>
 						</div>
@@ -542,7 +542,7 @@
 							<div class="titWrap">
 								<p class="gBold">임금수준별 AI기술 노출 지수</p>
 							</div>
-							<div class="imgWrap">
+							<div class="imgWrap" data-aos="fade-right" data-aos-duration="1500" data-aos-once="true" data-aos-delay="1000">
 								<img src="./images/20241118/chart12.png" alt="임금수준별 AI기술 노출 지수">
 								<p>임금 Percentile</p>
 							</div>
@@ -645,6 +645,8 @@
 		src="https://www.jobaba.net/resource/js/main/jquery.vticker-min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.scrollbar/0.2.11/jquery.scrollbar.js"></script>
 
+		
+		<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 		<script>
 			$(document).ready(function(){
 				var swiper = new Swiper(".jobList .swiper-container", {
@@ -733,6 +735,7 @@
 					$("html, body").animate({ scrollTop: $(this.hash).offset().top }, 500);
 					e.preventDefault();
 				});
+				AOS.init();
 			});	
 		</script>
 
